--- a/.env.example
+++ b/.env.example
@@ -1,16 +1,39 @@
-# Supabase Configuration
-SUPABASE_URL=https://your-project.supabase.co
-SUPABASE_ANON_KEY=your-anon-key-here
-# NUNCA compartilhe a service_role key publicamente!
-# SUPABASE_SERVICE_ROLE_KEY=your-service-role-key-here
+# Environment Variables Template
+# Copy this file to .env and fill in the actual values
 
-# Supabase Database Configuration
-# Encontre essas informações em: Settings > Database no painel do Supabase
-DATABASE_HOST=db.your-project.supabase.co
+# Django Settings
+SECRET_KEY=your-secret-key-here
+DEBUG=False
+ALLOWED_HOSTS=your-domain.com,www.your-domain.com
+
+# Database Configuration (Supabase)
+USE_SUPABASE_DB=True
+DATABASE_URL=postgresql://user:password@host:port/database?sslmode=require
 DATABASE_NAME=postgres
-DATABASE_USER=postgres
-DATABASE_PASSWORD=your-database-password
+DATABASE_USER=postgres.your_project_ref
+DATABASE_PASSWORD=your_database_password
+DATABASE_HOST=aws-0-sa-east-1.pooler.supabase.com
 DATABASE_PORT=5432
 
-# Django Secret Key
-SECRET_KEY=your-secret-key-here
+# Supabase Configuration
+SUPABASE_URL=https://your-project-ref.supabase.co
+SUPABASE_ANON_KEY=your_anon_key
+SUPABASE_SERVICE_ROLE_KEY=your_service_role_key
+
+# Redis Configuration (optional)
+REDIS_URL=redis://localhost:6379/1
+
+# Email Configuration
+EMAIL_HOST=smtp.gmail.com
+EMAIL_PORT=587
+EMAIL_HOST_USER=your_email@gmail.com
+EMAIL_HOST_PASSWORD=your_app_password
+DEFAULT_FROM_EMAIL=noreply@your-domain.com
+
+# Admin Configuration
+ADMIN_EMAIL=admin@your-domain.com
+PEDIDO_CANCELAMENTO_SENHA=your_secure_cancel_password
+ADMIN_CANCEL_PASSWORD=your_secure_admin_password
+
+# Production URLs
+DOMAIN_NAME=your-domain.com
